fixin button alignment

--- a/public/css/partials/_global.scss
+++ b/public/css/partials/_global.scss
@@ -316,7 +316,7 @@ time {
 @-moz-document url-prefix() {
 
 	.search-button {
-		vertical-align: .4px !important;
+		vertical-align: -1.15px !important;
 	}
 }
 
